spade-tests/src/snapshots/spade_tests__typeinference__backward_type_in_generic_is_an_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity takes_generic<T>(x: T) -> bool {true}

entity x(b: &mut bool) -> bool {
    inst takes_generic(b)
}


error: Generic types cannot be ports
  ┌─ testinput:4:5
  │
4 │     inst takes_generic(b)
  │     ^^^^^^^^^^^^^^^^^^^^^ Parameter T is &mut bool which is a port type


