spade-tests/src/snapshots/spade_tests__typeinference__cast_from_mut_wire_container_is_disallowed.snap
---
source: spade-tests/src/typeinference.rs
---
struct port Container {
    m: &mut bool,
    r: &bool
}

entity test(a: Container) -> bool {
    std::conv::unsafe::unsafe_cast(a)
}


error: Attempting to cast from type containing &mut value
  ┌─ testinput:7:36
  │
7 │     std::conv::unsafe::unsafe_cast(a)
  │                                    ^ struct Container {m: &mut bool, r: &bool} has a &mut wire


