spade-tests/src/snapshots/spade_tests__typeinference__clock_must_be_of_type_clock.snap
---
source: spade-tests/src/typeinference.rs
---
entity test(b: int<4>) -> int<8> {
    reg(b) a = 3;
    a
}


error: Expected clock, got int<4>
  ┌─ testinput:2:9
  │
1 │ entity test(b: int<4>) -> int<8> {
  │                ------ Type int<4> inferred here
2 │     reg(b) a = 3;
  │         ^ expected clock
  │
  = note: Expected: clock
               Got: int<4>


