spade-tests/src/snapshots/spade_tests__typeinference__counter_without_trunc_causes_type_error.snap
---
source: spade-tests/src/typeinference.rs
---
entity counter(clk: clock, rst: bool) -> int<8> {
    reg(clk) x = x + 1;
    x
}


error: Expected type Number<8>, got Number<9>
  ┌─ testinput:2:18
  │
2 │     reg(clk) x = x + 1;
  │                  ^^^^^ Expected Number<8>, got Number<9>
  │
  = note: Addition creates one more output bit than the input to avoid overflow


