spade-tests/src/snapshots/spade_tests__typeinference__decl_propagates_type_info_correctly.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Type of expression is not fully known
  ┌─ testinput:4:13
  │
4 │     let x = 0;
  │             ^ Incomplete type
  │
  = Found incomplete type: int<t5>


