spade-tests/src/snapshots/spade_tests__typeinference__dereference_requires_target_type.snap
---
source: spade-tests/src/typeinference.rs
---
entity x(a: &bool) -> int<8> {
    *a
}


error: Output type mismatch. Expected int<8> got bool
  ┌─ testinput:1:30
  │  
1 │   entity x(a: &bool) -> int<8> {
  │                         ------ int<8> type specified here
  │ ╭──────────────────────────────^
2 │ │     *a
3 │ │ }
  │ ╰─^ Found type bool
  │  
  = note: Expected int<8>
               Got bool


